--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -82,137 +82,12 @@
                         <br /><br />
                     </div>
                 </div>
-
-
             </div>
-
         </div> 
         <!--END HEADER SECTION -->
-        <!-- BASIC INFO SECTION -->
-        <div id="basic-info">
-            <div class="container">
-
-                <div class="row main-top-margin text-center">
-                    <div class="col-md-8 col-md-offset-2 " >
-                        <h1>Welcome Guest, We Are For You</h1>
-                        <h4>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                        </h4>
-                    </div>
-                </div>
-                <div class="row main-low-margin text-center">
-                    <div class="col-md-4 col-sm-6" >
-                        <div class="text-center">
-                            <i class="fa fa-bolt fa-5x color-red"></i>
-                            <h4>Responsive Design</h4>
-                            <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nec enim sapien. Aliquam erat volutpat.
-                            Quisque eu ante at tortor imperdiet gravida nec sed turpis. Phasellus augue augue.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6"  >
-                        <div class="text-center">
-                            <i class="fa fa-comments fa-5x color-green"></i>
-                            <h4>24x7 Support</h4>
-                            <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nec enim sapien. Aliquam erat volutpat.
-                            Quisque eu ante at tortor imperdiet gravida nec sed turpis. Phasellus augue augue.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6" >
-                        <div class="text-center">
-                            <i class="fa fa-desktop fa-5x color-light-blue"></i>
-                            <h4>Awesome Display</h4>
-                            <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nec enim sapien. Aliquam erat volutpat.
-                            Quisque eu ante at tortor imperdiet gravida nec sed turpis. Phasellus augue augue.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row main-low-margin text-center">
-
-                    <div class="col-md-12 col-sm-12  text-justify" >
-                        <h3> Lorem ipsum dolor sit amet Riopsh</h3>
-                        <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-
-                        </p>
-                        <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-
-                        </p>
-                    </div>
-                </div>
-                <div class="row main-low-margin text-center">
-
-
-                    <div class="col-md-8 col-sm-8   text-justify" >
-                        <h3> Lorem ipsum dolor sit amet Riopsh</h3>
-                        <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-
-                        </p>
-                        <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-
-                        </p>
-                    </div>
-                    <div class="col-md-3  " >
-                        <img class="img-circle" src="{% static "assets/img/team/team1.png" %}" alt="">
-                        <h4><strong>Jhon Deo Alex</strong> </h4>
-                        <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Curabitur nec nisl odio. 
-
-                        </p>
-                        <p>
-                        {% if settings.SOCIAL_LINK_FACEBOOK %}
-                        <a href="{{ settings.SOCIAL_LINK_FACEBOOK }}"><i class="fa fa-facebook-square fa-2x color-facebook"></i></a>
-                        {% endif %}
-                        {% if settings.SOCIAL_LINK_TWITTER %}
-                        <a href=""{{ settings.SOCIAL_TWITTER }}><i class="fa fa-twitter-square fa-2x color-twitter"></i></a>
-                        {% endif %}
-                        {% if settings.SOCIAL_LINK_LINKEDIN %}
-                        <a href=""{{ settings.SOCIAL_LINK_LINKEDIN }}><i class="fa fa-linkedin-square fa-2x color-linkedin"></i></a>
-                        {% endif %}
-                        </p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--END BASIC INFO SECTION -->
+        {% block all_content %}
         <!--FOOTER SECTION -->
-        <div id="footer">
-            <div class="container">
-                <div class="row ">
-                    &copy; 2014 www.yourdomain.com | All Right Reserved 				
-
-                </div>
-
-            </div>
-
-        </div>  
-
+        {% endblock %}
         {% include "includes/footer_scripts.html" %}
     </body>
 </html>
