--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="{{ LANGUAGE_CODE }}"{% if LANGUAGE_BIDI %} dir="rtl"{% endif %}>
     {% load pages_tags mezzanine_tags i18n staticfiles %}
+    {% load background_image_tags %}
 
     <head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -68,7 +69,22 @@
         </div>
         <!--END NAV SECTION -->
         <!-- HEADER SECTION -->
-        <div id="header-section">
+        <div id="header-section" style="
+                 background: url('{% background_image_url %}');
+                 margin-top: -20px;
+                 padding-top:20px;
+                 text-align:center;
+                 background-position: center center;
+                 min-height: 300px;
+                 width: 100%;	
+                 -webkit-background-size: 100%;
+                 -moz-background-size: 100%;
+                 -o-background-size: 100%;
+                 background-size: 100%;
+                 -webkit-background-size: cover;
+                 -moz-background-size: cover;
+                 -o-background-size: cover;
+                 background-size: cover;">
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-10 col-md-offset-1 col-sm-12">
